--- a/summative/linear_regression/multivariate.ipynb
+++ b/summative/linear_regression/multivariate.ipynb
@@ -4,12 +4,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## This is a linear regsiiion model being buit to predict menstrual cylce pattern thereby boostign confidence in girls and also sef awareness "
+    "## Building a Period Prediction Linear Regression Model\n",
+    "\n",
+    "This notebook demonstrates the process of building a linear regression model to predict menstrual cycle periods.\n",
+    "\n",
+    "**Dataset:** \n",
+    "The dataset used in this analysis was obtained from Kaggle\n",
+    "#### Purpose\n",
+    "With this, girls can predict their next period, stand out without what if? and now the changes that goes on in their bodies \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#importing EDA libraries \n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import pandas as pd\n",
+    "\n",
+    "#import Ml libraries \n",
+    "\n",
+    "import sckit-learn\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
