--- a/summative/linear_regression/multivariate.ipynb
+++ b/summative/linear_regression/multivariate.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,184 @@
     "\n",
     "#import Ml libraries \n",
     "\n",
-    "import sckit-learn\n"
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#importing dataset\n",
+    "\n",
+    "data = pd.read_csv(\"menstrual_tracking_data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## EXPLORING THE DATASET"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>log_date</th>\n",
+       "      <th>cycle_length</th>\n",
+       "      <th>period_duration</th>\n",
+       "      <th>symptoms</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2023-08-18</td>\n",
+       "      <td>27</td>\n",
+       "      <td>4</td>\n",
+       "      <td>bloating, fatigue, acne</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2023-07-08</td>\n",
+       "      <td>24</td>\n",
+       "      <td>3</td>\n",
+       "      <td>acne, bloating</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2023-03-01</td>\n",
+       "      <td>33</td>\n",
+       "      <td>7</td>\n",
+       "      <td>cramps, bloating</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2023-09-05</td>\n",
+       "      <td>35</td>\n",
+       "      <td>6</td>\n",
+       "      <td>bloating, cramps, fatigue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2023-06-02</td>\n",
+       "      <td>31</td>\n",
+       "      <td>4</td>\n",
+       "      <td>fatigue</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user_id    log_date  ...  period_duration                   symptoms\n",
+       "0        1  2023-08-18  ...                4    bloating, fatigue, acne\n",
+       "1        2  2023-07-08  ...                3             acne, bloating\n",
+       "2        3  2023-03-01  ...                7           cramps, bloating\n",
+       "3        4  2023-09-05  ...                6  bloating, cramps, fatigue\n",
+       "4        5  2023-06-02  ...                4                    fatigue\n",
+       "\n",
+       "[5 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['user_id', 'log_date', 'cycle_length', 'period_duration', 'symptoms'], dtype='object')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.columns\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 500 entries, 0 to 499\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column           Non-Null Count  Dtype \n",
+      "---  ------           --------------  ----- \n",
+      " 0   user_id          500 non-null    int64 \n",
+      " 1   log_date         500 non-null    object\n",
+      " 2   cycle_length     500 non-null    int64 \n",
+      " 3   period_duration  500 non-null    int64 \n",
+      " 4   symptoms         500 non-null    object\n",
+      "dtypes: int64(3), object(2)\n",
+      "memory usage: 19.7+ KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(500, 5)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.info()\n",
+    "data.shape"
    ]
   },
   {
@@ -37,15 +214,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy "
-   ]
   }
  ],
  "metadata": {
